--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
+        "league/flysystem-aws-s3-v3": "3.0",
         "league/omnipay": "^3.2",
         "livewire/livewire": "^3.0",
         "omnipay/paypal": "^3.0",
@@ -28,7 +29,8 @@
         "nunomaduro/collision": "^7.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-web-tinker": "^1.10"
     },
     "autoload": {
         "psr-4": {
